대시보드 디자인 빼고 완료

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;500;600&display=swap">
 </head>
-<body>
-    <!-- 네비게이션 바 -->
+    <body>
+        <!-- 네비게이션 바 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <div class="navbar-nav">
-                <a class="nav-link active" href="#" data-tab="home">홈</a>
-                <a class="nav-link" href="#" data-tab="upload">업로드</a>
-                <a class="nav-link" href="#" data-tab="dashboard">대시보드</a>
+            <div class="navbar-nav d-flex align-items-center">
+                <img src="css/logo.png" alt="로고" style="width: 100px; height: 100px; margin-right: 109px;">
+                <a class="nav-link active" href="#" data-tab="home" style="margin-right: 45px;">홈</a>
+                <a class="nav-link" href="#" data-tab="upload" style="margin-right: 45px;">업로드</a>
+                <a class="nav-link" href="#" data-tab="dashboard" style="margin-right: 45px;">대시보드</a>
             </div>
         </div>
     </nav>
@@ -27,18 +29,16 @@
         <!-- 홈 탭 -->
         <div id="homeTab" class="tab-content active">
             <!-- 히어로 섹션 -->
-            <section class="hero-section">
+            <section class="hero-section" style="padding-top: 211px;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 mx-auto text-center">
-                            <h1 class="hero-title mb-4">
+                            <h1 class="hero-title" style="margin-bottom: 22px;">
                                 "공사원가 예산서, 더이상 불안해하지 마세요"
                             </h1>
-                            <h2 class="hero-subtitle mb-5">건설 예산 검증 서비스, CostGuardAI입니다.</h2>
-                            <p class="hero-description mb-4">
-                                정부고시 표준단가를 기반해서 예산 내역서를 자동으로 검증합니다.
-                            </p>
-                            <p class="hero-description mb-5">
+                            <h2 class="hero-subtitle" style="margin-bottom: 100px;">건설 예산 검증 서비스, <span class="costchecker-highlight">CostChecker</span>입니다.</h2>
+                            <p class="hero-description" style="margin-bottom: 113px;">
+                                정부고시 표준단가를 기반해서 예산 내역서를 자동으로 검증합니다.<br>
                                 간단한 파일 업로드만으로 최신 표준단가와 비교, 검토해서 누락, 오차를 방지하세요.
                             </p>
                             <button class="btn btn-start" onclick="switchTab('upload')">
@@ -75,6 +75,93 @@
                     </div>
                 </div>
             </section>
+
+            <!-- 기능 소개 섹션 -->
+            <section class="features-section" style="padding: 100px 0; background-image: url('css/nowback.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-center mb-5">
+                            <h2 class="features-title" style="color: #202020; text-align: center; font-family: Pretendard; font-size: 40px; font-style: normal; font-weight: 700; line-height: normal; letter-spacing: 1.2px; margin-bottom: 20px;">
+                                이제는 더 편리하게
+                            </h2>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="feature-card" style="width: 100%; height: 396px; flex-shrink: 0; border-radius: 30px; background: #FFF; padding: 50px; text-align: left; box-shadow: 0 15px 40px rgba(0,0,0,0.15);">
+                                <div class="card-content">
+                                    <h3 class="card-title" style="color: #262626; font-family: Pretendard; font-size: 24px; font-style: normal; font-weight: 700; line-height: 1.5; margin-bottom: 45px;">
+                                        최신 정부고시 표준단가 반영<br>
+                                        실시간 연동
+                                    </h3>
+                                    <hr style="border: none; height: 1px; background: rgba(0,0,0,0.1); margin: 30px 0; margin-bottom: 45px;">
+                                    <p class="card-description" style="color: var(--B2, #4C5661); font-family: Pretendard; font-size: 20px; font-style: normal; font-weight: 400; line-height: 1.8; margin: 0;">
+                                        매년 업데이트 되는<br>
+                                        표준단가의 최신버전과 예산항목을<br>
+                                        매칭해 자동으로 비교해드립니다.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="feature-card" style="width: 100%; height: 396px; flex-shrink: 0; border-radius: 30px; background: #FFF; padding: 50px; text-align: left; box-shadow: 0 15px 40px rgba(0,0,0,0.15);">
+                                <div class="card-content">
+                                    <h3 class="card-title" style="color: #262626; font-family: Pretendard; font-size: 24px; font-style: normal; font-weight: 700; line-height: 1.5; margin-bottom: 45px;">
+                                        보다 편하고 빠른 재검토<br>
+                                        <br>
+
+                                    </h3>
+                                    <hr style="border: none; height: 1px; background: rgba(0,0,0,0.1); margin: 30px 0; margin-bottom: 45px;">
+                                    <p class="card-description" style="color: var(--B2, #4C5661); font-family: Pretendard; font-size: 20px; font-style: normal; font-weight: 400; line-height: 1.8; margin: 0;">
+                                        Solar Pro2 AI 기술을 활용하여<br>
+                                        품명과 규격을 정확하게 분석하고<br>
+                                        표준공사코드와 매칭해드립니다.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="feature-card" style="width: 100%; height: 396px; flex-shrink: 0; border-radius: 30px; background: #FFF; padding: 50px; text-align: left; box-shadow: 0 15px 40px rgba(0,0,0,0.15);">
+                                <div class="card-content">
+                                    <h3 class="card-title" style="color: #262626; font-family: Pretendard; font-size: 24px; font-style: normal; font-weight: 700; line-height: 1.5; margin-bottom: 45px;">
+                                        책임의 불안을 줄인다<br>
+                                        <br>
+
+                                    </h3>
+                                    <hr style="border: none; height: 1px; background: rgba(0,0,0,0.1); margin: 30px 0; margin-bottom: 45px;">
+                                    <p class="card-description" style="color: var(--B2, #4C5661); font-family: Pretendard; font-size: 20px; font-style: normal; font-weight: 400; line-height: 1.8; margin: 0;">
+                                        전문가에게 맡겼더라도 불안했던 마음,<br>
+                                        이제는 스스로 검증해 안심하세요
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- 새로운 큰 카드 섹션 -->
+            <section class="large-card-section" style="padding: 100px 0 100px 0; background-image: url('css/nowback.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <div class="large-card" style="width: 1317px; min-height: 952px; flex-shrink: 0; border-radius: 30px; border: 1px solid #D6DBE5; background: #FFF; box-shadow: 0 4px 7.2px 1px #D6DBE5; padding: 80px; text-align: left;">
+                                <div class="card-content">
+                                    <h2 class="card-main-title" style="color: #202020; font-family: Pretendard; font-size: 40px; font-style: normal; font-weight: 700; line-height: normal; letter-spacing: 1.2px; margin-bottom: 40px;">
+                                        한 눈에 쉽게 보는 오차 검증
+                                    </h2>
+                                    <p class="card-main-description" style="color: #798089; font-family: Pretendard; font-size: 20px; font-style: normal; font-weight: 400; line-height: normal; margin: 0; margin-bottom: 40px;">
+                                        조달청 고시 표준단가 데이터와 AI 기술을 활용해 예산서 파일 안의 단가 오류를 검증합니다.<br>
+                                        오류 데이터들을 정리해 결과를 한 눈에 보기 좋고, 보고서 형식으로 받아볼 수도 있습니다.
+                                    </p>
+                                    <img src="css/mock.png" alt="Mock Image" style="width: 100%; max-width: 100%; height: auto; border-radius: 15px;">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
 
         <!-- 업로드 탭 -->
@@ -91,12 +178,9 @@
                         <div class="card border-0 shadow-sm">
                             <div class="card-body p-5">
                                 <div id="uploadArea" class="upload-area text-center p-5 border-2 border-dashed border-secondary rounded">
-                                    <i class="fas fa-cloud-upload-alt fa-3x text-muted mb-3"></i>
+                                    <img src="css/icon.png" style="width: 51px; height: 57px; object-fit: contain; margin-bottom: 1.5rem;">
                                     <h5 class="mb-3">파일을 드래그하거나 클릭하여 업로드</h5>
                                     <p class="text-muted mb-3">Excel 파일 (.xlsx, .xls)만 지원됩니다.</p>
-                                    <button class="btn btn-outline-primary" onclick="document.getElementById('fileInput').click()">
-                                        <i class="fas fa-folder-open me-2"></i>파일 선택
-                                    </button>
                                     <input type="file" id="fileInput" accept=".xlsx,.xls" style="display: none;">
                                 </div>
                                 
@@ -119,7 +203,7 @@
                                 <!-- 업로드 버튼 -->
                                 <div class="text-center mt-4">
                                     <button id="uploadBtn" class="btn btn-primary btn-lg px-5" onclick="processFile()" style="display: none;">
-                                        <i class="fas fa-cogs me-2"></i>표준공사코드 매칭하기
+                                        표준공사코드 매칭하기
                                     </button>
                                 </div>
                                 
@@ -137,7 +221,7 @@
                         <div class="card border-0 shadow-sm mt-4">
                             <div class="card-header bg-light">
                                 <h5 class="mb-0">
-                                    <i class="fas fa-info-circle me-2"></i>업로드 가이드
+                                    업로드 가이드
                                 </h5>
                             </div>
                             <div class="card-body">
@@ -272,16 +356,11 @@
     </main>
 
     <!-- 푸터 -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-20 mt-100" style="padding-top: 50px; padding-bottom: 50px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h5>건설 예산 검증 서비스</h5>
-                    <p class="mb-0">AI 기반 건설 프로젝트 예산 검증 솔루션</p>
-                </div>
-                <div class="col-md-6 text-end">
-                    <p class="mb-0">&copy; 2024 OMORI BLUE. All rights reserved.</p>
-                    <small class="text-muted">OMORI BLUE</small>
+                <div class="col-12 text-center">
+                    <p class="mb-0 text-center">&copy; CostChecker from OMORI BLUE. All rights reserved.</p>
                 </div>
             </div>
         </div>
