--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div id="homeTab" class="tab-content active">
             <!-- 히어로 섹션 -->
             <section class="hero-section" style="padding-top: 211px;">
+                <video class="hero-video" autoplay muted loop playsinline>
+                    <source src="css/background-4.webm" type="video/webm">
+                </video>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 mx-auto text-center">
