--- a/index.html
+++ b/index.html
@@ -257,100 +257,8 @@
                     
                     <!-- 결과 표시 영역 -->
                     <div id="resultContent" style="display: none;">
-                        <!-- 요약 통계 카드 -->
-                        <div class="row mb-5">
-                            <div class="col-md-3 mb-3">
-                                <div class="card stat-card">
-                                    <div class="card-body text-center">
-                                        <h6 class="card-title text-muted">전체 항목</h6>
-                                        <h2 class="stat-number">2000개</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <div class="card stat-card">
-                                    <div class="card-body text-center">
-                                        <h6 class="card-title text-muted">단가오류</h6>
-                                        <h2 class="stat-number text-danger">10</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <div class="card stat-card">
-                                    <div class="card-body text-center">
-                                        <h6 class="card-title text-muted">인식오류</h6>
-                                        <h2 class="stat-number">2</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <div class="card stat-card">
-                                    <div class="card-body text-center">
-                                        <h6 class="card-title text-muted">수정 완료</h6>
-                                        <h2 class="stat-number text-primary">2</h2>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- 오류 보고서 -->
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="mb-0">오류 보고서</h5>
-                            </div>
-                            <div class="card-body p-0">
-                                <div class="table-responsive">
-                                    <table class="table table-hover mb-0">
-                                        <thead class="table-light">
-                                            <tr>
-                                                <th>상태</th>
-                                                <th>파일 품목명</th>
-                                                <th>파일 기재 규격</th>
-                                                <th>파일 범위</th>
-                                                <th>파일 기입단가</th>
-                                                <th>표준 품목명</th>
-                                                <th>표준 규격</th>
-                                                <th>표준 범위</th>
-                                                <th>표준 단가</th>
-                                                <th>코드</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody id="errorReportTable">
-                                            <!-- 동적으로 생성될 내용 -->
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- 전체 검증 보고서 -->
-                        <div class="card">
-                            <div class="card-header">
-                                <h5 class="mb-0">전체 검증 보고서</h5>
-                            </div>
-                            <div class="card-body p-0">
-                                <div class="table-responsive">
-                                    <table class="table table-hover mb-0">
-                                        <thead class="table-light">
-                                            <tr>
-                                                <th>상태</th>
-                                                <th>파일 품목명</th>
-                                                <th>파일 기재 규격</th>
-                                                <th>파일 범위</th>
-                                                <th>파일 기입단가</th>
-                                                <th>표준 품목명</th>
-                                                <th>표준 규격</th>
-                                                <th>표준 범위</th>
-                                                <th>표준 단가</th>
-                                                <th>코드</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody id="fullReportTable">
-                                            <!-- 동적으로 생성될 내용 -->
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
+                        <div class="text-center py-5">
+                            <h3 class="text-muted">내역서를 업로드 해주세요</h3>
                         </div>
                     </div>
                 </div>
